Estrutura de diretórios alterada. Classes desnecessárias deletadas. Faltando conexão_BD, impressão, PDF e tratamento de arquivos TXT.

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -37,7 +37,7 @@ file.reference.poi-3.13-20150929.jar=C\:\\Users\\Diego\\Desktop\\poi-bin-3.13-20
 build.test.classes.dir=${build.dir}/test/classes
 platform.active=default_platform
 javac.compilerargs=
-main.class=my.inventariouepb.InventarioUI
+main.class=com.br.uepb.bsc7.www.UI.InventarioUI
 file.reference.poi-examples-3.13-20150929.jar=C\:\\Users\\Diego\\Desktop\\poi-bin-3.13-20150929\\poi-3.13\\poi-examples-3.13-20150929.jar
 dist.jar=${dist.dir}/InventarioUEPB.jar
 javac.test.processorpath=${javac.test.classpath}
