Para efeitos de backup! Estrutura de diretórios alterada. Novas classes inseridas e algumas renomeadas de acordo com o Diagrama de Classes. Conexão com BD parcialmente concluída! Faltando impressão, PDF e tratamento de arquivos TXT.

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,5 +1,6 @@
 #Mon Dec 14 13:25:09 GMT-03:00 2015
 excludes=
+file.reference.mysql-connector-java-5.1.37-bin.jar=src/com/br/uepb/bsc7/www/persistence/Driver/mysql-connector-java-5.1.37-bin.jar
 file.reference.poi-3.13-20150929.jar-1=D:\\DFA\\Programa\u00e7\u00e3o\\Projeto_Invent\u00e1rio_Biblioteca\\API_POI\\poi-3.13\\poi-3.13-20150929.jar
 file.reference.poi-bin-3.13-20150929.zip=D:\\DFA\\Programa\u00e7\u00e3o\\Projeto_Invent\u00e1rio_Biblioteca\\API_POI\\poi-bin-3.13-20150929.zip
 file.reference.poi-examples-3.13-20150929.jar-1=D:\\DFA\\Programa\u00e7\u00e3o\\Projeto_Invent\u00e1rio_Biblioteca\\API_POI\\poi-3.13\\poi-examples-3.13-20150929.jar
@@ -37,7 +38,7 @@ file.reference.poi-3.13-20150929.jar=C\:\\Users\\Diego\\Desktop\\poi-bin-3.13-20
 build.test.classes.dir=${build.dir}/test/classes
 platform.active=default_platform
 javac.compilerargs=
-main.class=com.br.uepb.bsc7.www.UI.InventarioUI
+main.class=com.br.uepb.bsc7.www.main.InventarioUEPB
 file.reference.poi-examples-3.13-20150929.jar=C\:\\Users\\Diego\\Desktop\\poi-bin-3.13-20150929\\poi-3.13\\poi-examples-3.13-20150929.jar
 dist.jar=${dist.dir}/InventarioUEPB.jar
 javac.test.processorpath=${javac.test.classpath}
@@ -95,7 +96,8 @@ javac.classpath=\
     ${file.reference.poi-excelant-3.13-20150929.jar-1}:\
     ${file.reference.poi-ooxml-3.13-20150929.jar-1}:\
     ${file.reference.poi-ooxml-schemas-3.13-20150929.jar-1}:\
-    ${file.reference.poi-scratchpad-3.13-20150929.jar-1}
+    ${file.reference.poi-scratchpad-3.13-20150929.jar-1}:\
+    ${file.reference.mysql-connector-java-5.1.37-bin.jar}
 annotation.processing.enabled.in.editor=false
 file.reference.commons-codec-1.9.jar=C\:\\Users\\Diego\\Desktop\\poi-bin-3.13-20150929\\poi-3.13\\lib\\commons-codec-1.9.jar
 build.generated.sources.dir=${build.dir}/generated-sources
