--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -97,7 +97,8 @@ javac.classpath=\
     ${file.reference.poi-ooxml-3.13-20150929.jar-1}:\
     ${file.reference.poi-ooxml-schemas-3.13-20150929.jar-1}:\
     ${file.reference.poi-scratchpad-3.13-20150929.jar-1}:\
-    ${file.reference.mysql-connector-java-5.1.37-bin.jar}
+    ${file.reference.mysql-connector-java-5.1.37-bin.jar}:\
+    ${libs.eclipselink.classpath}
 annotation.processing.enabled.in.editor=false
 file.reference.commons-codec-1.9.jar=C\:\\Users\\Diego\\Desktop\\poi-bin-3.13-20150929\\poi-3.13\\lib\\commons-codec-1.9.jar
 build.generated.sources.dir=${build.dir}/generated-sources
