--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,5 +1,6 @@
 #Mon Dec 14 13:25:09 GMT-03:00 2015
 excludes=
+file.reference.iText-5.0.5.jar=C:\\Users\\Diego\\Desktop\\iText-5.0.5.jar
 file.reference.mysql-connector-java-5.1.37-bin.jar=src/com/br/uepb/bsc7/www/persistence/Driver/mysql-connector-java-5.1.37-bin.jar
 file.reference.poi-3.13-20150929.jar-1=D:\\DFA\\Programa\u00e7\u00e3o\\Projeto_Invent\u00e1rio_Biblioteca\\API_POI\\poi-3.13\\poi-3.13-20150929.jar
 file.reference.poi-bin-3.13-20150929.zip=D:\\DFA\\Programa\u00e7\u00e3o\\Projeto_Invent\u00e1rio_Biblioteca\\API_POI\\poi-bin-3.13-20150929.zip
@@ -53,7 +54,6 @@ javadoc.splitindex=true
 javadoc.encoding=${source.encoding}
 javac.source=1.8
 application.vendor=Coordena\u00E7\u00E3o
-file.reference.log4j-1.2.17.jar=C\:\\Users\\Diego\\Desktop\\poi-bin-3.13-20150929\\poi-3.13\\lib\\log4j-1.2.17.jar
 junit.selected.version=4
 debug.classpath=${run.classpath}
 file.reference.commons-logging-1.1.3.jar=C\:\\Users\\Diego\\Desktop\\poi-bin-3.13-20150929\\poi-3.13\\lib\\commons-logging-1.1.3.jar
@@ -73,7 +73,6 @@ manifest.file=manifest.mf
 annotation.processing.enabled=true
 file.reference.poi-scratchpad-3.13-20150929.jar=C\:\\Users\\Diego\\Desktop\\poi-bin-3.13-20150929\\poi-3.13\\poi-scratchpad-3.13-20150929.jar
 dist.javadoc.dir=${dist.dir}/javadoc
-file.reference.poi-ooxml-3.13-20150929.jar=C\:\\Users\\Diego\\Desktop\\poi-bin-3.13-20150929\\poi-3.13\\poi-ooxml-3.13-20150929.jar
 src.dir=src
 mkdist.disabled=false
 endorsed.classpath=
@@ -82,12 +81,10 @@ javac.classpath=\
     ${file.reference.commons-codec-1.9.jar}:\
     ${file.reference.commons-logging-1.1.3.jar}:\
     ${file.reference.junit-4.12.jar}:\
-    ${file.reference.log4j-1.2.17.jar}:\
     ${file.reference.xmlbeans-2.6.0.jar}:\
     ${file.reference.poi-3.13-20150929.jar}:\
     ${file.reference.poi-examples-3.13-20150929.jar}:\
     ${file.reference.poi-excelant-3.13-20150929.jar}:\
-    ${file.reference.poi-ooxml-3.13-20150929.jar}:\
     ${file.reference.poi-ooxml-schemas-3.13-20150929.jar}:\
     ${file.reference.poi-scratchpad-3.13-20150929.jar}:\
     ${file.reference.poi-bin-3.13-20150929.zip}:\
@@ -98,7 +95,8 @@ javac.classpath=\
     ${file.reference.poi-ooxml-schemas-3.13-20150929.jar-1}:\
     ${file.reference.poi-scratchpad-3.13-20150929.jar-1}:\
     ${file.reference.mysql-connector-java-5.1.37-bin.jar}:\
-    ${libs.eclipselink.classpath}
+    ${libs.eclipselink.classpath}:\
+    ${file.reference.iText-5.0.5.jar}
 annotation.processing.enabled.in.editor=false
 file.reference.commons-codec-1.9.jar=C\:\\Users\\Diego\\Desktop\\poi-bin-3.13-20150929\\poi-3.13\\lib\\commons-codec-1.9.jar
 build.generated.sources.dir=${build.dir}/generated-sources
