--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,5 +1,6 @@
 #Mon Dec 14 13:25:09 GMT-03:00 2015
 excludes=
+file.reference.h2-1.4.190.jar=src/com/br/uepb/bsc7/www/persistence/Driver/h2-1.4.190.jar
 file.reference.iText-5.0.5.jar=C:\\Users\\Diego\\Desktop\\iText-5.0.5.jar
 file.reference.mysql-connector-java-5.1.37-bin.jar=src/com/br/uepb/bsc7/www/persistence/Driver/mysql-connector-java-5.1.37-bin.jar
 file.reference.poi-3.13-20150929.jar-1=D:\\DFA\\Programa\u00e7\u00e3o\\Projeto_Invent\u00e1rio_Biblioteca\\API_POI\\poi-3.13\\poi-3.13-20150929.jar
@@ -96,7 +97,8 @@ javac.classpath=\
     ${file.reference.poi-scratchpad-3.13-20150929.jar-1}:\
     ${file.reference.mysql-connector-java-5.1.37-bin.jar}:\
     ${libs.eclipselink.classpath}:\
-    ${file.reference.iText-5.0.5.jar}
+    ${file.reference.iText-5.0.5.jar}:\
+    ${file.reference.h2-1.4.190.jar}
 annotation.processing.enabled.in.editor=false
 file.reference.commons-codec-1.9.jar=C\:\\Users\\Diego\\Desktop\\poi-bin-3.13-20150929\\poi-3.13\\lib\\commons-codec-1.9.jar
 build.generated.sources.dir=${build.dir}/generated-sources
